Logica parcial de gastos y provisiones.

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -15,10 +15,14 @@
 								url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 							<p:menuitem value="Lista de Gastos" 
 								url="listagastos.xhtml" icon="ui-icon-search" />
+							<p:menuitem value="Registrar" 
+								url="registragasto.xhtml" icon="ui-icon-arrowthick-1-e" />
 						</p:submenu>
 						<p:submenu label="Provisiones">
 							<p:menuitem value="Lista de Provisiones"
 								url="listaprovisiones.xhtml" icon="ui-icon-search" />
+							<p:menuitem value="Registrar" 
+								url="registraprovision.xhtml" icon="ui-icon-arrowthick-1-e" />
 						</p:submenu>
 
 						<p:submenu label="Comunidades">
