--- a/WebContent/movimientosreferencias.xhtml
+++ b/WebContent/movimientosreferencias.xhtml
@@ -10,7 +10,7 @@
 		<h:form id="form">
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="33%" header="Modificar Comunidades">
+				<p:layoutUnit position="north" size="33%" header="Modificar Referencias Catastrales">
 
  
 								<h:panelGrid columns="4" cellpadding="5">
