--- a/WebContent/registracuota.xhtml
+++ b/WebContent/registracuota.xhtml
@@ -115,8 +115,9 @@
 									</p:fieldset>
 
 									<p:fieldset legend="Pago" id="panelPago">
-										<h:panelGrid columns="1" cellpadding="5">
-
+										<h:panelGrid columns="2" cellpadding="5">
+											<p:panel >
+												<h:panelGrid columns="1" cellpadding="1">
 											<p:panel >
 												<h:panelGrid columns="5" cellpadding="5">
 
@@ -130,38 +131,21 @@
 														
 													<h:outputText value="Devolucion: " />
 													<p:selectBooleanCheckbox value="#{GestorCuotas.bDevolucion}" />  
-
 												</h:panelGrid>
 										  </p:panel>
 
 											<p:panel >
 												<h:panelGrid columns="3" cellpadding="5">
-
-													<h:outputText for="FIPAGO" value="FIPAGO: " />
-													<p:inputMask id="FIPAGO" validatorMessage="La fecha del primer pago debe tener completarse segun el patron DD/MM/AAAA" value="#{GestorCuotas.sFIPAGO}" mask="99/99/9999" size="10" >
-														<f:validateLength minimum="10"/>
-													</p:inputMask>
-													<p:message for="FIPAGO" display="icon"/>
-
-													<h:outputText for="FFPAGO" value="FFPAGO: " />
-													<p:inputMask id="FFPAGO" validatorMessage="La fecha del ultimo pago debe tener completarse segun el patron DD/MM/AAAA" value="#{GestorCuotas.sFFPAGO}" mask="99/99/9999" size="10" >
-														<f:validateLength minimum="10"/>
-													</p:inputMask>
-													<p:message for="FFPAGO" display="icon"/>
-
-
 													<h:outputText for="IMCUCO" value="IMCUCO: " />
 													<p:inputText id="IMCUCO" value="#{GestorCuotas.sIMCUCO}" size="16" maxlength="16" validatorMessage="El importe de la cuota introducido es incorrecto." >
 														<f:validateRegex pattern="[0-9]+([\.|,][0-9]{2})?$" />
 													</p:inputText>
 													<p:message for="IMCUCO" display="icon"/>
+												</h:panelGrid>
+										  </p:panel>
 
-													<h:outputText for="FAACTA" value="FAACTA: " />
-													<p:inputMask id="FAACTA" validatorMessage="La fecha del ultimo pago debe tener completarse segun el patron DD/MM/AAAA" value="#{GestorCuotas.sFAACTA}" mask="99/99/9999" size="10" >
-														<f:validateLength minimum="10"/>
-													</p:inputMask>
-													<p:message for="FAACTA" display="icon"/>
-
+											<p:panel >
+												<h:panelGrid columns="3" cellpadding="5">
 													<h:outputText for="PTPAGO" value="Periodicidad: " />
 													<p:selectOneMenu id="PTPAGO" value="#{GestorCuotas.sPTPAGO}">
 														<f:selectItem itemLabel="Elija..." itemValue="" />
@@ -169,6 +153,38 @@
 														<f:validateLength minimum="1" /> 
 													</p:selectOneMenu>
 													<p:message for="PTPAGO" display="icon"/>
+												</h:panelGrid>
+										  </p:panel>
+										  </h:panelGrid>
+										  </p:panel>
+											<p:panel >
+												<h:panelGrid columns="4" cellpadding="5">
+
+													<h:outputText for="FIPAGO" value="FIPAGO: " />
+													<p:inputMask id="FIPAGO" validatorMessage="La fecha del primer pago debe tener completarse segun el patron DD/MM/AAAA" value="#{GestorCuotas.sFIPAGO}" mask="99/99/9999" size="10" >
+														<f:validateLength minimum="10"/>
+													</p:inputMask>
+													<p:commandButton id="hFIPAGO" icon="ui-icon-clock" update="FIPAGO" actionListener="#{GestorCuotas.hoyFIPAGO}"/>
+													<p:message for="FIPAGO" display="icon"/>
+
+													<h:outputText for="FFPAGO" value="FFPAGO: " />
+													<p:inputMask id="FFPAGO" validatorMessage="La fecha del ultimo pago debe tener completarse segun el patron DD/MM/AAAA" value="#{GestorCuotas.sFFPAGO}" mask="99/99/9999" size="10" >
+														<f:validateLength minimum="10"/>
+													</p:inputMask>
+													<p:commandButton id="hFFPAGO" icon="ui-icon-clock" update="FFPAGO" actionListener="#{GestorCuotas.hoyFFPAGO}"/>
+													<p:message for="FFPAGO" display="icon"/>
+
+
+
+
+													<h:outputText for="FAACTA" value="FAACTA: " />
+													<p:inputMask id="FAACTA" validatorMessage="La fecha del ultimo pago debe tener completarse segun el patron DD/MM/AAAA" value="#{GestorCuotas.sFAACTA}" mask="99/99/9999" size="10" >
+														<f:validateLength minimum="10"/>
+													</p:inputMask>
+													<p:commandButton id="hFAACTA" icon="ui-icon-clock" update="FAACTA" actionListener="#{GestorCuotas.hoyFAACTA}"/>
+													<p:message for="FAACTA" display="icon"/>
+
+
 
 												</h:panelGrid>
 										  </p:panel>
