--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -83,6 +83,29 @@
 										</h:panelGrid>
 									</p:fieldset>
 
+									<p:fieldset legend="Valor Catastral">
+										<h:panelGrid columns="2" cellpadding="5">
+											<p:panel>
+												<h:panelGrid columns="2" cellpadding="5">
+													<h:outputText for="IMVSUE"  value="IMVSUE: " />
+													<p:inputText id="IMVSUE" value="#{GestorReferenciasCatastrales.sIMVSUE}" size="16"  maxlength="16">
+													</p:inputText>
+
+													<h:outputText for="IMCATA" value="IMCATA: " />
+													<p:inputText id="IMCATA" value="#{GestorReferenciasCatastrales.sIMCATA}" size="16" maxlength="16">
+													</p:inputText>
+												</h:panelGrid>
+											</p:panel>
+											<p:panel>
+												<h:panelGrid columns="3" cellpadding="5">
+													<h:outputText for="FERECA" value="FERECA: " />
+													<p:inputMask id="FERECA" value="#{GestorReferenciasCatastrales.sFERECA}" mask="99/99/9999" size="10" maxlength="8"/>
+													<p:commandButton id="hFERECA" icon="ui-icon-clock" update="FERECA" actionListener="#{GestorReferenciasCatastrales.hoyFERECA}"/>
+												</h:panelGrid>
+											</p:panel>
+										</h:panelGrid>
+									</p:fieldset>
+
 									<p:fieldset legend="Emision">
 										<h:panelGrid columns="2" cellpadding="5">
 
