Lectura de ficheros. icono. GestorMovimientos

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -17,6 +17,8 @@
 								url="listagastos.xhtml" icon="ui-icon-search" />
 							<p:menuitem value="Registrar" 
 								url="registragasto.xhtml" icon="ui-icon-arrowthick-1-e" />
+								<p:menuitem value="Movimientos"
+									url="movimientosgastos.xhtml" icon="ui-icon-document" />
 						</p:submenu>
 						<p:submenu label="Provisiones">
 							<p:menuitem value="Lista de Provisiones"
