--- a/WebContent/registragasto.xhtml
+++ b/WebContent/registragasto.xhtml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -5,6 +6,8 @@
 	xmlns:p="http://primefaces.org/ui">
 <f:view contentType="text/html">
 	<h:head>
+		<title>Portal Provisiones</title>
+		<link rel="shortcut icon" href="recursos/favicon.ico"/> 
 	</h:head>
 	<h:body>
 		<h:form id="form">
@@ -102,7 +105,10 @@
 													<h:outputText value="Fecha del devengo: " />
 													<p:inputMask id="FEDEVE" value="#{GestorGastos.sFEDEVE}" mask="99/99/9999" size="10" maxlength="10"/>
 													<p:commandButton icon="ui-icon-clock" update="FEDEVE" actionListener="#{GestorGastos.hoyFEDEVE}" />
-
+												</h:panelGrid>
+											</p:panel>
+											<p:panel>
+												<h:panelGrid columns="3" cellpadding="5">
 													<h:outputText value="Fecha de fin de periodo: " />
 													<p:inputMask id="FFGTVP" value="#{GestorGastos.sFFGTVP}" mask="99/99/9999" size="10" maxlength="10" disabled="#{GestorGastos.bFFGTVP}"/>
 													<p:commandButton id="hFFGTVP" icon="ui-icon-clock" update="FFGTVP" actionListener="#{GestorGastos.hoyFFGTVP}" disabled="#{GestorGastos.bFFGTVP}"/>
@@ -110,7 +116,7 @@
 													<h:outputText value="Fecha limite del pago: " />
 													<p:inputMask id="FELIPG" value="#{GestorGastos.sFELIPG}" mask="99/99/9999" size="10" maxlength="10"/>
 													<p:commandButton icon="ui-icon-clock" update="FELIPG" actionListener="#{GestorGastos.hoyFELIPG}"/>
-													
+
 													<h:outputText value="Fecha de pago al proveedor: " />
 													<p:inputMask id="FEPGPR" value="#{GestorGastos.sFEPGPR}" mask="99/99/9999" size="10" maxlength="10"/>
 													<p:commandButton icon="ui-icon-clock" update="FEPGPR" actionListener="#{GestorGastos.hoyFEPGPR}"/>
