--- a/WebContent/registraprovision.xhtml
+++ b/WebContent/registraprovision.xhtml
@@ -6,6 +6,8 @@
 	xmlns:p="http://primefaces.org/ui">
 <f:view contentType="text/html">
 	<h:head>
+		<title>Portal Provisiones</title>
+		<link rel="shortcut icon" href="recursos/favicon.ico"/> 
 	</h:head>
 	<h:body>
 		<h:form id="form" onkeypress="return event.keyCode != 13">
