--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="ISO-8859-15"?>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -59,11 +59,11 @@
 									<p:fieldset legend="Activo">
 										<h:panelGrid columns="2" cellpadding="5">
 											<p:panel >
-												<h:panelGrid columns="4" cellpadding="5">
+												<h:panelGrid columns="3" cellpadding="5">
 													<h:outputText for="COACES" value="Codigo de activo: " />
-														<p:inputText id="COACES" value="#{GestorReferenciasCatastrales.sCOACES}" size="9" maxlength="9">
-														</p:inputText>
-													<p:message for="COACES" display="icon"/>
+													<p:inputText id="COACES" value="#{GestorReferenciasCatastrales.sCOACES}" size="9" maxlength="9">
+													</p:inputText>
+
 													<p:commandButton value="Cargar Referencia" update="msgs, popup, COACES, NURCAT" actionListener="#{GestorReferenciasCatastrales.comprobarActivo}"/>	
 												</h:panelGrid>
 											</p:panel>
@@ -72,12 +72,11 @@
 									</p:fieldset>
 
 									<p:fieldset legend="Referencia Catastral">
-										<h:panelGrid columns="3" cellpadding="5">
+										<h:panelGrid columns="2" cellpadding="5">
 
 											<h:outputText for="NURCAT" value="NURCAT: " />
 											<p:inputText id="NURCAT" value="#{GestorReferenciasCatastrales.sNURCAT}" size="20" maxlength="20">
 											</p:inputText>
-											<p:message for="NURCAT" display="icon"/>
 
 											<h:outputText for="TIRCAT" value="TIRCAT: " />
 											<p:inputText id="TIRCAT" value="#{GestorReferenciasCatastrales.sTIRCAT}" size="60" maxlength="60">
@@ -89,14 +88,16 @@
 									<p:fieldset legend="Valor Catastral">
 										<h:panelGrid columns="2" cellpadding="5">
 											<p:panel>
-												<h:panelGrid columns="2" cellpadding="5">
+												<h:panelGrid columns="3" cellpadding="5">
 													<h:outputText for="IMVSUE"  value="IMVSUE: " />
 													<p:inputText id="IMVSUE" value="#{GestorReferenciasCatastrales.sIMVSUE}" size="16"  maxlength="16">
 													</p:inputText>
+													<h:outputText value="¤" />
 
 													<h:outputText for="IMCATA" value="IMCATA: " />
 													<p:inputText id="IMCATA" value="#{GestorReferenciasCatastrales.sIMCATA}" size="16" maxlength="16">
 													</p:inputText>
+													<h:outputText value="¤" />
 												</h:panelGrid>
 											</p:panel>
 											<p:panel>
@@ -116,11 +117,6 @@
 											<p:inputText id="ENEMIS" value="#{GestorReferenciasCatastrales.sENEMIS}" size="60"  maxlength="60">
 											</p:inputText>
 
-											<h:outputText for="COTEXA" value="COTEXA: " />
-											<p:inputText id="COTEXA" value="#{GestorReferenciasCatastrales.sCOTEXA}" size="10" maxlength="14" disabled="true">
-											</p:inputText>
-
-
 										</h:panelGrid>
 									</p:fieldset>
 
@@ -131,7 +127,6 @@
 
 											<p:inputText id="OBTEXC" value="#{GestorReferenciasCatastrales.sOBTEXC}" size="110" maxlength="110" >
 											</p:inputText>
-											<p:message for="OBTEXC" display="icon"/>
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -187,45 +182,39 @@
 									<p:fieldset legend="Criterios de Busqueda">
 										<h:panelGrid columns="1" cellpadding="5">
 											<p:panel id="panelBuscar" >
-												<h:panelGrid columns="3" cellpadding="5">
+												<h:panelGrid columns="2" cellpadding="5">
 													<h:outputText for="NOPRAC" value="Nombre de la Provincia: " />
-														<p:inputText id="NOPRAC" value="#{GestorReferenciasCatastrales.sNOPRAC}" size="18" maxlength="18">
-														</p:inputText>
-													<p:message for="NOPRAC" display="icon"/>
+													<p:inputText id="NOPRAC" value="#{GestorReferenciasCatastrales.sNOPRAC}" size="18" maxlength="18">
+													</p:inputText>
+
 
 													<h:outputText for="NOMUIN" value="Nombre del Municipio: " />
-														<p:inputText id="NOMUIN" value="#{GestorReferenciasCatastrales.sNOMUIN}" size="30" maxlength="30">
-														</p:inputText>
-													<p:message for="NOMUIN" display="icon"/>
+													<p:inputText id="NOMUIN" value="#{GestorReferenciasCatastrales.sNOMUIN}" size="30" maxlength="30">
+													</p:inputText>
 
 													<h:outputText for="COPOIN" value="Codigo Postal: " />
-														<p:inputText id="COPOIN" value="#{GestorReferenciasCatastrales.sCOPOIN}" size="5" maxlength="5">
-														</p:inputText>
-													<p:message for="COPOIN" display="icon"/>
+													<p:inputText id="COPOIN" value="#{GestorReferenciasCatastrales.sCOPOIN}" size="5" maxlength="5">
+													</p:inputText>
 
 													<h:outputText for="NOVIAS" value="Nombre de la Via: " />
-														<p:inputText id="NOVIAS" value="#{GestorReferenciasCatastrales.sNOVIAS}" size="60" maxlength="60">
-														</p:inputText>
-													<p:message for="NOVIAS" display="icon"/>
+													<p:inputText id="NOVIAS" value="#{GestorReferenciasCatastrales.sNOVIAS}" size="60" maxlength="60">
+													</p:inputText>
 
 													<h:outputText for="NUPOAC" value="Portal/Punto Kilometrico: " />
-														<p:inputText id="NUPOAC" value="#{GestorReferenciasCatastrales.sNUPOAC}" size="17" maxlength="17">
-														</p:inputText>
-													<p:message for="NUPOAC" display="icon"/>
+													<p:inputText id="NUPOAC" value="#{GestorReferenciasCatastrales.sNUPOAC}" size="17" maxlength="17">
+													</p:inputText>
 
 													<h:outputText for="NUPIAC" value="Piso: " />
-														<p:inputText id="NUPIAC" value="#{GestorReferenciasCatastrales.sNUPIAC}" size="11" maxlength="11">
-														</p:inputText>
-													<p:message for="NUPIAC" display="icon"/>
+													<p:inputText id="NUPIAC" value="#{GestorReferenciasCatastrales.sNUPIAC}" size="11" maxlength="11">
+													</p:inputText>
 
 													<h:outputText for="NUPUAC" value="Puerta: " />
-														<p:inputText id="NUPUAC" value="#{GestorReferenciasCatastrales.sNUPUAC}" size="17" maxlength="17">
-														</p:inputText>
-													<p:message for="NUPUAC" display="icon"/>
+													<p:inputText id="NUPUAC" value="#{GestorReferenciasCatastrales.sNUPUAC}" size="17" maxlength="17">
+													</p:inputText>
 												</h:panelGrid>
 											</p:panel>
 											<p:panel >
-												<h:panelGrid columns="3" cellpadding="5">
+												<h:panelGrid columns="2" cellpadding="5">
 													
 													<p:commandButton value="Buscar" update="popup, form:activos" actionListener="#{GestorReferenciasCatastrales.buscaActivos}" oncomplete="dlgTabla.show()"/>	
 													<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorReferenciasCatastrales.limpiarPlantillaActivo}" />
