Revision Gastos y mensajes comunidades.

--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -30,7 +30,7 @@
 									</p:panel>
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
-											<p:commandButton value="Limpiar Plantilla" update="panel, msgs, popup" actionListener="#{GestorReferenciasCatastrales.limpiarPlantilla}"/>
+											<p:commandButton value="Limpiar Plantilla" update="panel, msgs, popup" actionListener="#{GestorReferenciasCatastrales.limpiarPlantillaReferencia}"/>
 											<p:commandButton value="Alta" update="panel, msgs, popup" actionListener="#{GestorReferenciasCatastrales.realizaAlta}" />
 										</h:panelGrid>
 									</p:fieldset>
