Revision de fechas e importes en gastos

--- a/WebContent/movimientoscuotas.xhtml
+++ b/WebContent/movimientoscuotas.xhtml
@@ -286,7 +286,7 @@
 											<p:panel >
 												<h:panelGrid columns="3" cellpadding="5">
 													
-													<p:commandButton value="Buscar" update="popup, form:activos" actionListener="#{GestorMovimientosCuotas.buscaActivosConCuotas}" oncomplete="dlgTabla.show()"/>	
+													<p:commandButton value="Buscar" update="popup, form:activos" actionListener="#{GestorMovimientosCuotas.buscaActivos}" oncomplete="dlgTabla.show()"/>	
 													<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorMovimientosCuotas.limpiarPlantillaActivo}" />	
 
 														<p:ajaxStatus  id="pensandoActivo">  
