--- a/WebContent/registracuota.xhtml
+++ b/WebContent/registracuota.xhtml
@@ -264,7 +264,7 @@
 											<p:panel >
 												<h:panelGrid columns="2" cellpadding="5">
 													
-													<p:commandButton value="Buscar" update="popup, form:activos" actionListener="#{GestorCuotas.buscaActivosConComunidad}" oncomplete="dlgTabla.show()"/>	
+													<p:commandButton value="Buscar" update="popup, form:activos" actionListener="#{GestorCuotas.buscaActivos}" oncomplete="dlgTabla.show()"/>	
 													<p:commandButton value="Limpiar Plantilla" update="panelBuscar" actionListener="#{GestorCuotas.limpiarPlantillaActivo}" />	
 
 												</h:panelGrid>
