Revisión de acentos y posiciones.

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="ISO-8859-15"?>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -13,8 +13,8 @@
 		<h:form>
 			<p:layout fullPage="true">
 
-				<p:layoutUnit position="north" size="33%" header="Portal Provisiones">
-					<h:outputText value="Contenido superior." />
+				<p:layoutUnit position="north" size="25%" header="Portal Provisiones">
+					<h:outputText value=" " />
 				</p:layoutUnit>
 
 				<p:layoutUnit position="west" size="20%" header="Menus">
@@ -22,7 +22,7 @@
 				</p:layoutUnit>
 
 				<p:layoutUnit position="center">
-					<h:outputText value="Contenido Central." />
+					<h:outputText value=" " />
 				</p:layoutUnit>
 
 			</p:layout>
