--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -21,7 +21,7 @@
 
 						<p:submenu label="Provisiones">
 							<p:menuitem value="Cerrar" 
-								url="registraprovision.xhtml" icon="ui-icon-check" />
+								url="cierraprovisiones.xhtml" icon="ui-icon-check" />
 						</p:submenu>
 
 						<p:submenu label="Comunidades">
@@ -53,6 +53,10 @@
 								<p:menuitem value="Movimientos"
 									url="movimientosimpuestos.xhtml" icon="ui-icon-document" />	
 							</p:submenu>
+						</p:submenu>
+						<p:submenu label="Archivos">
+							<p:menuitem value="Descargar" 
+								url="envios.xhtml" icon="ui-icon-check" />
 						</p:submenu>
 					</p:slideMenu>
 </html>
