--- a/WebContent/cierraprovisiones.xhtml
+++ b/WebContent/cierraprovisiones.xhtml
@@ -50,12 +50,11 @@
 										<h:panelGrid columns="1" cellpadding="5">
 
 									<p:panel >
-										<h:panelGrid columns="4" cellpadding="5">
+										<h:panelGrid columns="3" cellpadding="5">
 											<h:outputText for="NUPROF" value="Provisión de fondos: " />
 												<p:inputText id="NUPROF" value="#{GestorProvisiones.sNUPROF}" size="9" maxlength="9">
 												</p:inputText>
-											<p:message for="NUPROF" display="icon"/>	
-											<p:commandButton value="Cargar Provisiones Abiertas" update="msgs, popup, NUPROF form:provisiones" actionListener="#{GestorProvisiones.cargaProvisionesAbiertas}" oncomplete="dlgTablaProvisiones.show()"/>	
+											<p:commandButton value="Cargar Provisiones Abiertas" update="msgs, popup, form:provisiones" actionListener="#{GestorProvisiones.cargaProvisionesAbiertas}" oncomplete="dlgTablaProvisiones.show()"/>	
 										</h:panelGrid>
 									</p:panel>
 									<p:panel >
