--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -6,8 +6,6 @@
 					<p:slideMenu style="width:95%" backLabel="Retroceder">
 
 						<p:submenu label="Activos">
-							<p:menuitem value="Cargar"
-								url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 							<p:menuitem value="Lista de Activos" 
 								url="listaactivos.xhtml" icon="ui-icon-search" />
 						</p:submenu>
@@ -55,8 +53,10 @@
 							</p:submenu>
 						</p:submenu>
 						<p:submenu label="Archivos">
+							<p:menuitem value="Cargar"
+								url="cargador.xhtml" icon="ui-icon-arrowthick-1-n" />
 							<p:menuitem value="Descargar" 
-								url="envios.xhtml" icon="ui-icon-check" />
+								url="envios.xhtml" icon="ui-icon-arrowthichk-1-s" />
 						</p:submenu>
 					</p:slideMenu>
 </html>
